--- a/vm/pylib-crate/Cargo.toml
+++ b/vm/pylib-crate/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rustpython-pylib"
 version = "0.1.0"
-authors = ["Noah <33094578+coolreader18@users.noreply.github.com>"]
+authors = ["RustPython Team"]
 edition = "2018"
 
 [dependencies]
